--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -1,26 +1,30 @@
+.nav-block {
+  padding: 0 1rem;
+}
+
 .nav-section {
   position: fixed;
-  z-index: 1;
+  z-index: 9999;
   width: 100%;
+  margin-top: 1rem;
 }
 
 .navbar {
   display: flex;
-  justify-content: center;
-}
-
-.nav-brand {
-  margin-top: 0.5rem;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__list {
-  width: 100%;
+  display: flex;
+  font-size: 1.5rem;
+  max-height: 100%;
+  align-items: center;
   margin: 0;
 }
 
 .nav__item {
-  border-bottom: 1px solid #222;
-  padding: 0.5rem 2rem;
+  margin-right: 2rem;
 }
 
 .nav__item > a {
@@ -30,41 +34,4 @@
 
 .nav__item > a:hover {
   color: #fff;
-}
-
-.nav__toggler {
-  cursor: pointer;
-  opacity: 0.5;
-  transition: .15s;
-}
-
-.nav.collapsible--expanded .nav__toggler {
-  border-radius: 5px;
-  box-shadow: 0 0 0 3px #666;
-  opacity: 1;
-}
-
-@media screen and (min-width: 768px) {
-  .nav__toggler {
-      display: none;
-  }
-
-  .nav__list {
-      display: flex;
-      font-size: 1.6rem;
-      max-height: 100%;
-      opacity: 1;
-      width: auto;
-  }
-  
-  .nav__item {
-      border: 0;
-  }
-}
-
-.collapsible__content {
-  max-height: 0;
-  overflow: hidden;
-  opacity: 0;
-  transition: all 0.3s;
 }
