--- a/src/components/navbar/style.css
+++ b/src/components/navbar/style.css
@@ -41,24 +41,23 @@
   }
 }
 
+/* Socials */
+
 .social-bg {
   background-color: var(--color-primary);
-  height: 3rem;
-  border-radius: 0.75rem;
+  border-radius: 5px;
+  opacity: 90%;
 }
 
-.social-link {
-  position: relative;
-  top: -2px;
-  margin-right: 2rem;
-  margin: 0 auto;
+.social-bg:hover {
+  opacity: 100%;
 }
 
 .social-link > img {
-  padding: 0.5rem 1rem;
-  height: 100%;
+  height: 1.5rem;
+  padding: 0.1rem 0.7rem;
 }
 
 .linkedin {
-  padding-left: 0.5rem;
+  padding-left: 3px;
 }
