--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -168,6 +168,7 @@
 
 .skill-container {
   margin: 0.5rem 1rem;
+  transition: 0.3s;
 }
 
 .skill-badge {
@@ -199,4 +200,8 @@
   .skill-badge {
     width: 100%;
   }
+}
+
+.skill-container:hover {
+  transform: scale(1.1);
 }
