--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,12 +1,12 @@
 .hero {
   position: relative;
   width: 100vw;
-  height: 500px;
+  height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  overflow: hidden;
-  padding-left: 50px;
+  padding-top: 70px;
+  overflow-y: visible;
 }
 
 .hero::before {
@@ -15,7 +15,7 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100%;
+  height: 120%;
   left: 0;
   position: absolute;
   top: 0;
@@ -25,17 +25,18 @@
 .hero-content {
   position: relative;
   color: white;
+  padding: 0 4rem;
 }
 
 .hero-content::before {
   background-image: url(../../assets/images/cross.png);
   background-size: cover;
   content: "";
-  height: 50px;
-  left: -30px;
+  height: 40px;
+  left: 10px;
   position: absolute;
-  top: -34px;
-  width: 50px;
+  top: -25px;
+  width: 40px;
 }
 
 .hero__heading,
@@ -50,6 +51,21 @@
 }
 
 @media screen and (min-width: 768px) {
+  .hero {
+    height: 350px;
+  }
+
+  .hero-content {
+    padding: 0 5rem;
+  }
+
+  .hero-content::before {
+    height: 50px;
+    width: 50px;
+    left: 15px;
+    top: -30px;
+  }
+
   .hero__heading {
     font-size: 5rem;
     font-weight: 500;
