--- a/src/pages/resume/style.css
+++ b/src/pages/resume/style.css
@@ -7,7 +7,15 @@
 }
 
 .react-pdf__Page__canvas {
+  height: 100% !important;
   margin: 0 auto;
   width: 100% !important;
-  height: 100% !important;
+}
+
+.download-btn {
+  background-color: var(--color-primary);
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-size: 2rem;
 }
