--- a/src/pages/resume/style.css
+++ b/src/pages/resume/style.css
@@ -12,10 +12,6 @@
   width: 100% !important;
 }
 
-.download-btn {
-  background-color: var(--color-primary);
-  border-radius: 5px;
-  border: none;
-  color: white;
-  font-size: 2rem;
+.btn-text {
+  font-size: 2.2rem;
 }
