--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -61,8 +61,20 @@
   padding: 1rem 0;
 }
 
-.certs > img {
+.cert-badge {
   max-height: 150px;
+  transition: 0.3s;
+}
+
+.cert-badge:hover {
+  transform: scale(1.1);
+}
+
+.cert-validation {
+  padding-top: 0.5rem;
+  font-size: 1.2rem;
+  text-align: center;
+  opacity: 80%;
 }
 
 .certs-container > p {
@@ -71,7 +83,7 @@
 }
 
 @media screen and (min-width: 768px) {
-  .certs > img {
+  .cert-badge {
     max-height: 200px;
   }
 }
