--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -15,7 +15,7 @@
 
 .about-image {
   height: auto;
-  padding: 2rem;
+  padding: 5rem 3rem;
   justify-self: center;
   align-self: center;
   max-width: 100%;
