--- a/src/App.css
+++ b/src/App.css
@@ -79,9 +79,15 @@ a {
 
 .grid {
   display: grid;
+  gap: 1rem;
+  padding: 2rem;
 }
 
 @media screen and (min-width: 768px) {
+  .grid {
+    padding: 2rem 4rem;
+  }
+
   .grid--1x2 {
     grid-template-columns: repeat(2, 1fr);
   }
