updated certs, resume, skills

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -115,8 +115,8 @@
 .skill-badge {
   width: 100%;
   max-height: 80px;
-  filter: invert(78%) sepia(68%) saturate(5631%) hue-rotate(159deg)
-    brightness(95%) contrast(97%);
+  /* filter: invert(78%) sepia(68%) saturate(5631%) hue-rotate(159deg)
+    brightness(95%) contrast(97%); */
 }
 
 .skill-name {
